--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "mpi/gradient-descent/csv"]
-	path = mpi/gradient-descent/csv
+[submodule "mpi/csv"]
+	path = mpi/csv
 	url = https://github.com/ben-strasser/fast-cpp-csv-parser.git
